--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,22 @@
-/* Shared */
-:root { font-family: sans-serif; background: gray; }
-* { margin: 0; padding: 0; }
+/* main.jsx */
+html, body, #root { margin: 0; height: 100%; font-family: sans-serif; background: #2C2D32; color: white; }
+.navigation { display: flex; padding: 1em; gap: 3em; justify-content: center; background: #121214; }
+.navigation a { color: white; text-decoration: none; font-size: 1.5em; }
+.navigation a:hover { text-decoration: underline; }
+
+
+/* App.jsx */
+.app-div { display: flex; flex-direction: column; height: 100%; }
+
 
 /* home.jsx */
-.home-div { display: flex; flex-direction: column; min-height: 100vh; align-items: center; background: whitesmoke; color: black; }
+.home-div { display: flex; flex-direction: column; height: 100%; padding: 2em; justify-content: center; align-items: center; text-align: center; background: url('../assets/background.jpg') no-repeat center center; background-size: cover; }
+.home-div img { width: 300px; height: 300px; margin-bottom: 1.5em; border-radius: 12.5%; }
+.home-div h1 { margin-bottom: 0.5em; font-size: 2.5em; }
+.home-div p { max-width: 750px; margin-bottom: 3em; font-size: 1.25em; }
+
+.home-buttons { display: flex; margin-top: 1rem; gap: 1.5em; justify-content: center; }
+.home-buttons a { padding: 0.5em 1em; border: 1px solid white; border-radius: 5px; font-size: 1.25em; text-decoration: none; color: white; transition: background 0.25s; }
+.home-buttons a:hover { background: rgba(255, 255, 255, 0.125); }
+
+.box { padding: 3rem 3rem; background-color: rgba(0, 0, 0, 0.5); border-radius: 25px; box-shadow: 0 4px 12px rgba(0,0,0,0.5); }
