Finalizing Projects and Services.
Finished stylizing both projects and services. Utilizing the previously set up .css to easily reuse <div>'s and make the website look match across the entire website. Includes a bunch of new asset photos for both the projects and services. Also updated App.jsx to include an animated .gif on the navigation bar to meet the requirement and show that it is constantly loaded without changing between pages. Other minor fixes such as correcting .css files to remove unneeded settings, and correcting code errors in other files.

--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -6,6 +6,14 @@
 
 
 /* aboutme.jsx */
-.aboutme-photo { width: 200px; height: 200px; border-radius: 12.5%; }
+.aboutme-photo { width: 200px; border-radius: 12.5%; }
 .aboutme-resume a { color: cornflowerblue; font-weight: 750; transition: color 0.3s ease; }
 .aboutme-resume a:hover { color: purple; }
+
+
+/* projects.jsx */
+.project-photo { width: 375px; border-radius: 12.5px; }
+
+
+/* services.jsx */
+.service-photo { width: 100px; margin-bottom: 0.875em; margin-left: 1em; border-radius: 12.5px; }
