--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,9 @@
 /* main.jsx */
 html, body, #root { margin: 0; height: 100%; font-family: sans-serif; background: #2C2D32; color: white; }
-.navigation { display: flex; padding: 1em; gap: 3em; justify-content: center; background: #121214; }
+.navigation { display: flex; padding: 1em; gap: 3em; justify-content: center; align-items: center; background: #121214; }
 .navigation a { color: white; text-decoration: none; font-size: 1.5em; }
 .navigation a:hover { text-decoration: underline; }
+.gem-gif { width: 64px; }
 
 
 /* App.jsx */
