--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,5 @@
-/* main.jsx */
+/* Shared */
+/* .CSS that is shared across the entire website. */
 html, body, #root { margin: 0; height: 100%; font-family: sans-serif; background: #2C2D32; color: white; }
 .navigation { display: flex; padding: 1em; gap: 3em; justify-content: center; align-items: center; background: #121214; }
 .navigation a { color: white; text-decoration: none; font-size: 1.5em; }
@@ -7,10 +8,12 @@ html, body, #root { margin: 0; height: 100%; font-family: sans-serif; background
 
 
 /* App.jsx */
+/* .CSS that is only utilized in App.jsx. */
 .app-div { display: flex; flex-direction: column; height: 100%; }
 
 
 /* home.jsx */
+/* .CSS that is only utilized in home.jsx. */
 .home-div { display: flex; flex-direction: column; height: 100%; padding: 2em; justify-content: center; align-items: center; text-align: center; background: url('../assets/background.jpg') no-repeat center center; background-size: cover; }
 .home-div img { width: 300px; height: 300px; margin-bottom: 1.5em; border-radius: 12.5%; }
 .home-div h1 { margin-bottom: 0.5em; font-size: 2.5em; }
