--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -9,14 +9,15 @@
 /* aboutme.jsx */
 /* .CSS that is only utilized in aboutme.jsx. */
 .aboutme-photo { width: 200px; border-radius: 12.5%; }
-.aboutme-resume a { color: cornflowerblue; font-weight: 750; transition: color 0.3s ease; }
-.aboutme-resume a:hover { color: purple; }
+.aboutme-resume a { color: cornflowerblue; font-weight: 750; transition: color 0.25s ease; }
+.aboutme-resume a:hover { color: darkblue; }
 
 
 /* projects.jsx */
 /* .CSS that is only utilized in projects.jsx. */
-.project-photo { width: 375px; border-radius: 12.5px; }
-
+.projects-photo { width: 375px; border-radius: 12.5px; }
+.projects-link a { color: cornflowerblue; font-weight: 750; transition: color 0.25s ease; }
+.projects-link a:hover { color: darkblue; }
 
 /* services.jsx */
 /* .CSS that is only utilized in services.jsx. */
@@ -26,8 +27,8 @@
 /* contactme.jsx */
 /* .CSS that is only utilized in contactme.jsx */
 .contactme-form { display: flex; flex-direction: column; gap: 1em; }
-.contactme-form input, .contactme-form textarea { padding: 1em; border: 1px solid white; border-radius: 5px; font-size: 1em; font-family: sans-serif; color: white; background-color: rgba(255, 255, 255, 0.1); transition: 0.3s ease-in-out; }
+.contactme-form input, .contactme-form textarea { padding: 1em; border: 1px solid white; border-radius: 5px; font-size: 1em; font-family: sans-serif; color: white; background-color: rgba(255, 255, 255, 0.1); transition: 0.375s ease-in-out; }
 .contactme-form textarea { height: 150px; resize: none; }
-.contactme-form input:focus, .contactme-form textarea:focus { border-color: cornflowerblue; }
+
 .contactme-button { padding: 1em; border: 1px solid white; border-radius: 5px; font-size: 1em; cursor: pointer; color: white; background-color: cornflowerblue; transition: all 0.25s ease-in-out; }
-.contactme-button:hover { background-color: darkorchid; }
+.contactme-button:hover { background-color: darkblue; }
