--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,8 +19,8 @@ html, body, #root { margin: 0; height: 100%; font-family: sans-serif; background
 .home-div h1 { margin-bottom: 0.5em; font-size: 2.5em; }
 .home-div p { max-width: 750px; margin-bottom: 3em; font-size: 1.25em; }
 
-.home-buttons { display: flex; margin-top: 1rem; gap: 1.5em; justify-content: center; }
-.home-buttons a { padding: 0.5em 1em; border: 1px solid white; border-radius: 5px; font-size: 1.25em; text-decoration: none; color: white; transition: background 0.25s; }
-.home-buttons a:hover { background: rgba(255, 255, 255, 0.125); }
+.home-buttons { display: flex; margin-top: 1em; gap: 1.5em; justify-content: center; }
+.home-buttons a { padding: 0.5em 1em; border: 1px solid white; border-radius: 5px; font-size: 1.25em; text-decoration: none; color: white; background: cornflowerblue; transition: 0.25s ease-in-out; }
+.home-buttons a:hover { background: darkblue; }
 
-.box { padding: 3rem 3rem; background-color: rgba(0, 0, 0, 0.5); border-radius: 25px; box-shadow: 0 4px 12px rgba(0,0,0,0.5); }
+.box { padding: 2.5em; background: rgba(0, 0, 0, 0.5); border-radius: 25px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5); }
